1.16 support and additions
Support for Minecraft 1.16
Support for Sponge (world edit) .schem files
Support fir litematica .litematic files
Settings file that you can modify to support new blocks and mobs
Other fixes and updates